--- a/ProAcc/Views/Customers/Index.cshtml
+++ b/ProAcc/Views/Customers/Index.cshtml
@@ -11,7 +11,7 @@
 <script src="~/Asset/Scripts/Datatable/dataTables.bootstrap4.min.js"></script>
 <a class="card-title">Customer List</a>
 <hr />
-<table class="table _search" id="tblCustomer">
+<table class="table" id="tblCustomer">
     <thead>
         <tr>
             <th>Customer Name</th>
@@ -238,7 +238,7 @@
                     }
                  },
                  cancel: function(){
-                       $.alert('You clicked on <strong>cancel</strong>');
+                      // $.alert('You clicked on <strong>cancel</strong>');
                  },
               }
          });
