--- a/ProAcc/Views/Activity/_ActivityCreationCreate.cshtml
+++ b/ProAcc/Views/Activity/_ActivityCreationCreate.cshtml
@@ -4,6 +4,7 @@
     ViewBag.Title = "Create Activity";
 }
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+@*<link href="~/Asset/css/Activity.css" rel="stylesheet" />*@
 
 <style>
     /*span {
@@ -30,28 +31,28 @@
                     @*<span id="lblTask" style="color:red" />*@
                 </div>
                 <div>
-                    &nbsp;&nbsp;&nbsp;<span  class="Class_span" id="lblTask">&nbsp;</span>
+                    &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblTask">&nbsp;</span>
                 </div>
             </div>
 
             @*<div class="form-group">
-                <label class="control-label col-md-4 required">Sequence</label>
-                <div class="col-md-10">
-                    <input type="text" class="form-control" id="txtSequence" />
-                </div>
-                <div>
-                    &nbsp;&nbsp;&nbsp;<span id="lblSequence">&nbsp;</span>
-                </div>
-            </div>*@
+                    <label class="control-label col-md-4 required">Sequence</label>
+                    <div class="col-md-10">
+                        <input type="text" class="form-control" id="txtSequence" />
+                    </div>
+                    <div>
+                        &nbsp;&nbsp;&nbsp;<span id="lblSequence">&nbsp;</span>
+                    </div>
+                </div>*@
             <div class="form-group">
                 <label class="control-label col-md-6 required">Application Area</label>
                 <div class="col-md-10">
                     <input type="text" class="form-control" id="txtApplicationArea" />
-                    <input type="hidden" id="hiddenActivityId"/>
+                    <input type="hidden" id="hiddenActivityId" />
                     @*<span id="lblApplicationArea" style="color:red" />*@
                 </div>
                 <div>
-                    &nbsp;&nbsp;&nbsp;<span  class="Class_span" id="lblApplicationArea">&nbsp;</span>
+                    &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblApplicationArea">&nbsp;</span>
                 </div>
             </div>
         </div>
@@ -61,7 +62,7 @@
             <div class="form-group">
                 <label class="control-label col-md-4 required">Phase</label>
                 <div class="col-md-10">
-                    <input id="drphiddenPhase" type="hidden"/>
+                    <input id="drphiddenPhase" type="hidden" />
                     <select class="form-control" id="drpPhase">
                         <option value="0">Select Phase</option>
                         @foreach (var item in ViewBag.Phase)
@@ -73,14 +74,14 @@
                     @*<span id="lblPhase" style="color:red" />*@
                 </div>
                 <div>
-                    &nbsp;&nbsp;&nbsp;<span  class="Class_span" id="lblPhase">&nbsp;</span>
+                    &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblPhase">&nbsp;</span>
                 </div>
             </div>
 
             <div class="form-group">
                 <label class="control-label col-md-4 required">Role</label>
                 <div class="col-md-10">
-                    <input id="drphiddenRole" type="hidden"/>
+                    <input id="drphiddenRole" type="hidden" />
                     <select class="form-control" id="drpRole">
                         <option value="0">Select Role</option>
                         @foreach (var item in ViewBag.Role)
@@ -92,22 +93,22 @@
                     @*<span id="lblRole" style="color:red" />*@
                 </div>
                 <div>
-                    &nbsp;&nbsp;&nbsp;<span  class="Class_span" id="lblRole">&nbsp;</span>
+                    &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblRole">&nbsp;</span>
                 </div>
             </div>
         </div>
         @*<div class="col-md-12">
-            <div class="form-group">
-                <label class="control-label col-md-4 required">Application Area</label>
-                <div class="col-md-10">
-                    <input type="text" class="form-control" id="txtApplicationArea" />
-                    <input type="hidden" id="hiddenActivityId"/>
+                <div class="form-group">
+                    <label class="control-label col-md-4 required">Application Area</label>
+                    <div class="col-md-10">
+                        <input type="text" class="form-control" id="txtApplicationArea" />
+                        <input type="hidden" id="hiddenActivityId"/>
+                    </div>
+                    <div>
+                        &nbsp;&nbsp;&nbsp;<span id="lblApplicationArea">&nbsp;</span>
+                    </div>
                 </div>
-                <div>
-                    &nbsp;&nbsp;&nbsp;<span id="lblApplicationArea">&nbsp;</span>
-                </div>
-            </div>
-        </div>*@
+            </div>*@
         <div class="col-10">
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
@@ -122,7 +123,7 @@
 </div>
 <div class="w3-container">
     @*<h2>W3.CSS Modal</h2>*@
-   @* <button onclick="document.getElementById('id01').style.display='block'">Open Modal</button>*@
+    @* <button onclick="document.getElementById('id01').style.display='block'">Open Modal</button>*@
 
     <div id="id01" class="w3-modal">
         <div class="w3-modal-content" style="margin-left: 355px;margin-top: 110px; height:20%;">
@@ -131,7 +132,7 @@
                 <span onclick="document.getElementById('id01').style.display='none'" class="w3-button w3-display-topright">&times;</span>
                 @*<label style="margin-bottom:10px !important;">Select Task</label>*@
                 <div class="row" style="margin-top:3%;">
-                    <div class="col-10" >
+                    <div class="col-10">
                         <select class="form-control" id="drpTsk">
                         </select>
                     </div>
@@ -139,7 +140,7 @@
                         <button type="button" id="btnSeq" class="btn btn-primary" style="margin-bottom:50px !important;">Save</button>
                     </div>
                 </div>
-                
+
 
             </div>
         </div>
@@ -261,7 +262,7 @@
     });
 
     function ValidateActivity() {
-        
+
         var Task = $("#txtTask").val();
         var ApplicationArea = $("#txtApplicationArea").val();
         var Phase = $('#drpPhase').val();
@@ -374,7 +375,7 @@
     });
 
     $("#btnSeq").on("click", function () {
-        
+
         var LatestTaskId = $("#hiddenActivityId").val();
         var LastTaskId = $("#drpTsk").val();
         var type = $("#drpPhase").val();
@@ -427,7 +428,7 @@
     });
 
     $("#btntivityCreUpdate").on("click", function () {
-       
+
          var id = $("#activityrid").val();
         var Task = $("#txtTask").val();
         var sequence = $("#txtSequence").val();
@@ -477,7 +478,7 @@
                     url: '@Url.Action("Edit","Activity")',
                     data: { model : model},
                 success: function (response) {
-                  
+
                          if (response > 0) {
                             $("#hiddenActivityId").val(response);
                             $("#drpTsk").empty();
@@ -490,7 +491,7 @@
                                     contentType: "application/json; charset=utf-8",
                                     dataType: "json",
                                     success: function (response) {
-                                       
+
                                         if (response != null) {
                                             $('#drpTsk').append($("<option value='0'>Please Select Last Task</option>"));
                                             $.each(response, function (index, item) {
