--- a/ProAcc/Views/ProjectCreation/_ProjectCreationIndex.cshtml
+++ b/ProAcc/Views/ProjectCreation/_ProjectCreationIndex.cshtml
@@ -211,7 +211,7 @@
                     }
                  },
                  cancel: function(){
-                       $.alert('You clicked on <strong>cancel</strong>');
+                      // $.alert('You clicked on <strong>cancel</strong>');
                  },
               }
          });
