--- a/ProAcc/Views/ProjectMonitor/AssessmentMonitor.cshtml
+++ b/ProAcc/Views/ProjectMonitor/AssessmentMonitor.cshtml
@@ -863,26 +863,28 @@
                 var ColValue = $("#jqGrid").jqGrid('getGridParam', 'selrow');
 
                 var EST_hours = $("#jqGrid").jqGrid('getCell', ColValue, 'EST_hours');
+                var Actual_St_hours=$("#jqGrid").jqGrid('getCell', ColValue, 'Actual_St_hours');
                 var Planed__St_Date = $("#jqGrid").jqGrid('getCell', ColValue, 'Planed__St_Date');
-                var Planed__En_Date = $("#jqGrid").jqGrid ('getCell', ColValue, 'Planed__En_Date');
+                var Planed__En_Date = $("#jqGrid").jqGrid('getCell', ColValue, 'Planed__En_Date');
+                var Actual_St_Date = $("#jqGrid").jqGrid('getCell', ColValue, 'Actual_St_Date');
+                var Actual_En_Date = $("#jqGrid").jqGrid ('getCell', ColValue, 'Actual_En_Date');
                 //filterResult = JSON.stringify(newResult);
                 var Id = postdata.Id;
                 var Task_Other_Environment = postdata.Task_Other_Environment;
                 var Dependency = postdata.Dependency;
                 var Pending = postdata.Pending;
                 var Delay_occurred = postdata.Delay_occurred;
-                var StatusId = postdata.StatusId;               
-                var Actual_St_hours = postdata.Actual_St_hours;  
-                Actual_St_hours = Actual_St_hours.replace(":", ".");
-                var Actual_St_Date = postdata.Actual_St_Date;
-                var Actual_En_Date = postdata.Actual_En_Date;
+                var StatusId = postdata.StatusId;   
                 var Notes = postdata.Notes;
                 //var EST_hours = EST_hours;
                 //var Planed__St_Date = Planed__St_Date;
                 //var Planed__En_Date = Planed__En_Date;
                 var EST_hours;
+                var Actual_St_hours;
                 var Planed__St_Date;
-                var Planed__En_Date
+                var Planed__En_Date;                
+                var Actual_St_Date;
+                var Actual_En_Date;
                 //if (Notes == "") {
                 //    alert("HI");
                    
@@ -891,14 +893,22 @@
                 if (UserType == 'Project Manager') {
                     EST_hours = postdata.EST_hours;
                     EST_hours = EST_hours.replace(":", ".");
+                    Actual_St_hours = Actual_St_hours;
+                     Actual_St_hours = Actual_St_hours.replace(":", ".");
                     Planed__St_Date = postdata.Planed__St_Date;
                     Planed__En_Date = postdata.Planed__En_Date;
+                     Actual_St_Date = Actual_St_Date;
+                    Actual_En_Date = Actual_En_Date;
                 }
                 else {
                     EST_hours = EST_hours;
                     EST_hours = EST_hours.replace(":", ".");
+                     Actual_St_hours = postdata.Actual_St_hours;
+                     Actual_St_hours = Actual_St_hours.replace(":", ".");
                      Planed__St_Date = Planed__St_Date;
-                     Planed__En_Date = Planed__En_Date;
+                    Planed__En_Date = Planed__En_Date;
+                    Actual_St_Date = postdata.Actual_St_Date;
+                    Actual_En_Date = postdata.Actual_En_Date;
                 }
 
                 var Message;
