--- a/ProAcc/Views/User/Index.cshtml
+++ b/ProAcc/Views/User/Index.cshtml
@@ -212,7 +212,7 @@
                     }
                  },
                  cancel: function(){
-                       $.alert('You clicked on <strong>cancel</strong>');
+                      // $.alert('You clicked on <strong>cancel</strong>');
                  },
               }
          });
