--- a/ProAcc/Views/Assessment/FioriAppsReport.cshtml
+++ b/ProAcc/Views/Assessment/FioriAppsReport.cshtml
@@ -107,34 +107,47 @@
 
 <div>
     @Html.Hidden("RedirectTo", Url.Action("Home", "Home"))
-    <div style="visibility:hidden">
-        <div id="dialog-message" title="Info">
-            <p>
-                <span class="ui-icon ui-icon-circle-check" style="float:left; margin:0 7px 50px 0;"></span>
-                @ViewBag.Message
-            </p>
-        </div>
-    </div>
-
     @if (ViewBag.Message != null)
     {
-        <script type="text/javascript">
-            $(function () {
 
-                $("#dialog-message").dialog({
-                    modal: true,
-                    buttons: {
-                        Ok: function () {
-                            $(this).dialog("close");
-                            var url = $("#RedirectTo").val();
-                            location.href = url;
-                        }
-                    }
-                });
+        <a id="Msg" style="display:none">@ViewBag.Message</a>
+        <script type="text/javascript">
+            var info = $('#Msg').text();
+            Notiflix.Report.Info("ProAcc Info !", info, "Click", function () {
+                var url = $("#RedirectTo").val();
+                location.href = url;
             });
         </script>
 
     }
+    @*<div style="visibility:hidden">
+            <div id="dialog-message" title="Info">
+                <p>
+                    <span class="ui-icon ui-icon-circle-check" style="float:left; margin:0 7px 50px 0;"></span>
+                    @ViewBag.Message
+                </p>
+            </div>
+        </div>
+
+        @if (ViewBag.Message != null)
+        {
+            <script type="text/javascript">
+                $(function () {
+
+                    $("#dialog-message").dialog({
+                        modal: true,
+                        buttons: {
+                            Ok: function () {
+                                $(this).dialog("close");
+                                var url = $("#RedirectTo").val();
+                                location.href = url;
+                            }
+                        }
+                    });
+                });
+            </script>
+
+        }*@
 </div>
 
 <script type="text/javascript" charset="utf-8">
