--- a/ProAcc/Views/Report/AssessmentReport.cshtml
+++ b/ProAcc/Views/Report/AssessmentReport.cshtml
@@ -3,6 +3,25 @@
     ViewBag.Title = "AssessmentReport";
     Layout = "~/Views/shared/_Layout.cshtml";
 }
-
-<h2>AssessmentReport</h2>
-
+<script src="~/Asset/Jquery/PdfJs/pdf.js"></script>
+<div>
+    <iframe id="pdf-js-viewer" src="~/Asset/UploadedFiles/Temp/678bda2f-c281-48c1-b565-64f3773d3b1f.pdf" title="webviewer" frameborder="0"></iframe>
+</div>
+<script>
+    $(document).ready(function () {
+        var Path ="@ViewBag.PDFfileName";
+        Path = Path.replace("~/", "");
+        var loc = window.location.protocol + "//" + window.location.host + "/" + Path;
+    $('#pdf-js-viewer').attr('src', loc);
+        dimention();
+        $(window).resize(function () {
+            dimention();
+        });
+        function dimention() {
+            var newHeight = $(".app-main__inner").height()-10;
+            var Width = $(".app-main__inner").width();
+            $("iframe").height(newHeight);
+            $("iframe").width(Width);
+        }
+    });
+</script>
